# VisioGrid

./: .gitignore  Cargo.toml  Config.toml  README.md  README_ZH.md  Unimplemented.txt  agent.toml  devnote.txt  error_definition  management.toml  server_config.toml
Agent/: Cargo.toml
AgentLibrary/: Cargo.toml
AgentLibrary/src/connection/channel/: control_channel_receive_thread.rs  control_channel_receiver.rs  control_channel_sender.rs  data_channel_receive_thread.rs  data_channel_receiver.rs  data_channel_sender.rs  mod.rs  send_thread.rs
AgentLibrary/src/connection/packet/: agent_info_packet.rs  agent_information_packet.rs  alive_ack_packet.rs  alive_acknowledge_packet.rs  alive_reply_packet.rs  control_acknowledge_packet.rs  file_header_acknowledge_packet.rs  file_header_reply_packet.rs  file_transfer_reply_packet.rs  file_transfer_result_packet.rs  mod.rs  performance_packet.rs  result_packet.rs  still_process_ack_packet.rs  still_process_acknowledge_packet.rs  still_process_reply_packet.rs  task_info_ack_packet.rs  task_info_acknowledge_packet.rs  task_info_reply_packet.rs
AgentLibrary/src/connection/socket/: management_socket.rs  mod.rs
AgentLibrary/src/management/: agent.rs  calculate_manager.rs  file_manager.rs  inference_manager.rs  management.rs  manager.rs  mod.rs  monitor.rs
AgentLibrary/src/management/utils/: mod.rs
AgentLibrary/src/manager/: agent.rs  mod.rs
AgentLibrary/src/manager/utils/: mod.rs
AgentLibrary/src/utils/: config.rs  logger.rs  logging.rs  mod.rs
Client/: Cargo.toml
ClientLibrary/: Cargo.toml
ClientLibrary/src/: lib.rs
ClientLibrary/src/connection/: mod.rs
ClientLibrary/src/connection/channel/: mod.rs
ClientLibrary/src/connection/packet/: mod.rs
ClientLibrary/src/connection/socket/: mod.rs
ClientLibrary/src/manager/: client.rs  file_manager.rs  mod.rs
ClientLibrary/src/utils/: config.rs  logger.rs
Common/: Cargo.toml
Common/src/: lib.rs
Common/src/connection/packet/: mod.rs
Common/src/connection/socket/: mod.rs  socket_stream.rs
Common/src/management/: monitor.rs
Common/src/management/utils/: agent_information.rs  agent_state.rs  bounding_box.rs  confirm_type.rs  file_header.rs  file_transfer_result.rs  format.rs  inference_type.rs  mod.rs  model_type.rs  performance.rs  prevent_reenter.rs  task_info.rs  task_result.rs
Common/src/manager/utils/: agent_information.rs  file_transfer_result.rs  mod.rs  performance.rs  task_result.rs
Common/src/utils/: logger.rs  logging.rs  mod.rs
Common/src/utils/log_entry/: gstreamer.rs  io.rs  network.rs  system.rs  task.rs
Common/static/html/: config.html  inference.html  test.html
Common/static/javascript/: config.js  inference.js  log.js
Common/static/script/ultralytics/: inference.py  picture_inference.py  video_inference.py
Common/static/web/static/css/: main.ed8a56b7.css  main.ed8a56b7.css.map
Common/static/web/static/js/: main.01479aeb.js
Macro/: Cargo.toml
Management/: Cargo.toml
ManagementLibrary/: Cargo.toml
ManagementLibrary/src/: lib.rs
ManagementLibrary/src/connection/channel/: control_channel_receive_thread.rs  control_channel_receiver.rs  control_channel_sender.rs  data_channel_receive_thread.rs  data_channel_receiver.rs  data_channel_sender.rs  mod.rs  send_thread.rs
ManagementLibrary/src/connection/packet/: agent_information_acknowledge_packet.rs  alive_packet.rs  confirm_packet.rs  control_packet.rs  data_channel_port_packet.rs  file_body_packet.rs  file_header_packet.rs  file_transfer_end_packet.rs  mod.rs  performance_ack_packet.rs  performance_acknowledge_packet.rs  result_acknowledge_packet.rs  still_process_packet.rs  task_info_packet.rs  task_result_ack_packet.rs
ManagementLibrary/src/connection/socket/: agent_socket.rs  mod.rs
ManagementLibrary/src/management/: agent.rs  agent_manager.rs  agnet.rs  file_manager.rs  management.rs  manager.rs  mod.rs  monitor.rs  result_repository.rs  task_manager.rs
ManagementLibrary/src/management/utils/: image_task.rs  inference_task.rs  mod.rs  monitor.rs  task.rs  task_info.rs  video_info.rs
ManagementLibrary/src/manager/: agent_manager.rs  agnet.rs  file_manager.rs  management.rs  mod.rs  result_repository.rs  task_manager.rs
ManagementLibrary/src/manager/utils/: confirm_type.rs  image_task.rs  mod.rs
ManagementLibrary/src/utils/: config.rs  logger.rs  logging.rs  mod.rs  port_pool.rs
ManagementLibrary/src/web/api/: config.rs  dashboard.rs  home.rs  inference.rs  javascript.rs  log.rs  misc.rs  mod.rs  monitor.rs  websocket.rs
ManagementLibrary/src/web/page/: config.rs  inference.rs  javascript.rs  log.rs  mod.rs
ManagementLibrary/src/web/utils/: mod.rs  performance_websocket.rs  websocket.rs  websocket_type.rs
ManagementLibrary/static/: config.html  inference.html  log.html
ManagementLibrary/static/html/: inference.html  log.html
ManagementLibrary/static/javascript/: config.js  inference.js  log.js
ManagementLibrary/static/script/: inference.py
Server/: Cargo.toml
Server/src/: main.rs
ServerLibrary/: Cargo.toml
ServerLibrary/src/: lib.rs
ServerLibrary/src/connection/: mod.rs
ServerLibrary/src/connection/channel/: control_channel_receive_thread.rs  control_channel_receiver.rs  control_channel_sender.rs  data_channel_receive_thread.rs  data_channel_receiver.rs  data_channel_sender.rs  mod.rs
ServerLibrary/src/connection/connection_channel/: control_channel_receive_thread.rs  control_channel_sender.rs  data_channel_receive_thread.rs  data_channel_sender.rs  mod.rs  send_thread.rs
ServerLibrary/src/connection/packet/: base_packet.rs  data_channel_port_packet.rs  file_body_packet.rs  file_header_packet.rs  mod.rs  still_process_packet.rs  task_info_packet.rs
ServerLibrary/src/connection/socket/: mod.rs
ServerLibrary/src/manager/: node.rs
ServerLibrary/src/manager/utils/: file_transfer_result.rs  task.rs  task_info.rs
ServerLibrary/src/utils/: config.rs  port_pool.rs
ServerLibrary/static/: inference.html
ServerLibrary/static/javascript/: log.js
agent/: Cargo.toml
client_library/: Cargo.toml
common/: Cargo.toml
data/: Cargo.toml
(+94 files in other folders)
