[package]
name = "AgentLibrary"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
toml = "0.8.12"
image = "0.25.1"
common = "0.1.0"
chrono = "0.4.38"
sysinfo = "0.30.10"
lazy_static = "1.4.0"
serde_json = "1.0.116"
Common = { path = "../Common" }
uuid = { version = "1.8.0", features = ["v4"] }
tokio = { version = "1.37.0", features = ["full"] }
serde = { version = "1.0.198", features = ["derive"] }
