[package]
name = "AgentLibrary"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
toml = "0.8.19"
image = "0.25.2"
chrono = "0.4.38"
sysinfo = "0.31.4"
async-ctrlc = "1.2.0"
lazy_static = "1.4.0"
serde_json = "1.0.128"
Common = { path = "../Common" }
uuid = { version = "1.10.0", features = ["v4"] }
tokio = { version = "1.40.0", features = ["full"] }
serde = { version = "1.0.210", features = ["derive"] }
