[package]
name = "AgentLibrary"
version = "1.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
toml = "0.8.19"
async-ctrlc = "1.2.0"
lazy_static = "1.5.0"
serde_json = "1.0.132"
Macro = { path = "../Macro" }
Common = { path = "../Common" }
uuid = { version = "1.11.0", features = ["v4"] }
tokio = { version = "1.41.0", features = ["full"] }
serde = { version = "1.0.213", features = ["derive"] }
