[package]
name = "Common"
version = "1.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
toml = "0.8.19"
glib = "0.20.4"
chrono = "0.4.38"
colored = "2.1.0"
sysinfo = "0.32.0"
gstreamer = "0.23.2"
thiserror = "1.0.65"
rust-embed = "8.5.0"
lazy_static = "1.5.0"
serde_json = "1.0.132"
Macro = { path = "../Macro" }
serde = { version = "1.0.213", features = ["derive"] }
tokio = { version = "1.41.0", features = ["full", "tracing"] }
uuid = { version = "1.11.0", features = ["v4", "fast-rng", "macro-diagnostics", "serde"] }
