[package]
name = "ManagementLibrary"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zip = "0.6.6"
toml = "0.8.12"
image = "0.25.1"
chrono = "0.4.38"
futures = "0.3.30"
actix-rt = "2.9.0"
actix-web = "4.5.1"
ab_glyph = "0.2.25"
imageproc = "0.24.0"
once_cell = "1.19.0"
gstreamer = "0.22.4"
rust-embed = "8.3.0"
actix-files = "0.6.5"
lazy_static = "1.4.0"
serde_json = "1.0.116"
actix-multipart = "0.6.1"
sanitize-filename = "0.5.0"
gstreamer-pbutils = "0.22.0"
Common = { path = "../Common" }
tokio = { version = "1.37.0", features = ["full"] }
serde = { version = "1.0.197", features = ["derive"] }
tokio-stream = { version = "0.1.15", features = ["full"] }
uuid = { version = "1.8.0", features = ["v4", "fast-rng", "macro-diagnostics", "serde"] }
