[package]
name = "ManagementLibrary"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zip = "2.2.0"
toml = "0.8.19"
image = "0.25.2"
actix = "0.13.5"
chrono = "0.4.38"
futures = "0.3.30"
actix-rt = "2.10.0"
actix-web = "4.9.0"
ab_glyph = "0.2.28"
imageproc = "0.25.0"
once_cell = "1.19.0"
gstreamer = "0.22.7"
rust-embed = "8.5.0"
actix-files = "0.6.6"
lazy_static = "1.5.0"
serde_json = "1.0.128"
actix-web-actors = "4.3.0"
actix-multipart = "0.7.2"
sanitize-filename = "0.5.0"
gstreamer-pbutils = "0.22.6"
Common = { path = "../Common" }
tokio = { version = "1.40.0", features = ["full"] }
serde = { version = "1.0.210", features = ["derive"] }
tokio-stream = { version = "0.1.16", features = ["full"] }
uuid = { version = "1.10.0", features = ["v4", "fast-rng", "macro-diagnostics", "serde"] }
