[package]
name = "ManagementLibrary"
version = "1.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zip = "2.2.0"
toml = "0.8.19"
actix = "0.13.5"
chrono = "0.4.38"
futures = "0.3.31"
actix-web = "4.9.0"
actix-cors = "0.7.0"
gstreamer = "0.23.2"
actix-files = "0.6.6"
lazy_static = "1.5.0"
mime_guess = "=2.0.5"
serde_json = "1.0.132"
actix-web-actors = "4.3.0"
actix-multipart = "0.7.2"
sanitize-filename = "0.5.0"
gstreamer-pbutils = "0.23.2"
Macro = { path = "../Macro" }
Common = { path = "../Common" }
tokio = { version = "1.41.0", features = ["full"] }
serde = { version = "1.0.213", features = ["derive"] }
tokio-stream = { version = "0.1.16", features = ["full"] }
uuid = { version = "1.11.0", features = ["v4", "fast-rng", "macro-diagnostics", "serde"] }
